--- a/.README.md
+++ b/.README.md
@@ -100,7 +100,7 @@ cd /data/data/com.termux/files/home/ && git clone https://github.com/binyamin-bi
 cd /data/data/com.termux/files/home/ && git clone https://github.com/binyamin-binni/b4u
 cd /data/data/com.termux/files/home/ && git clone https://github.com/binyamin-binni/bnt
 cd /data/data/com.termux/files/home/ && git clone https://github.com/binyamin-binni/bxz
-
+cd /data/data/com.termux/files/home/ && git clone https://github.com/Binyamin-binni/b-root
 echo " ROOT setup has been completed"
 echo " Now you can use your termux as a root"
 echo " Please exit your termux and turn it on again"
